# spectraforge-eq

./: .gitignore  README.md  create_icon.cjs  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/audio/: analyzer.rs  loader.rs  matcher.rs  mod.rs  profile.rs
src-tauri/src/dsp/: filters.rs
src/components/: ControlPanel.css  ControlPanel.tsx  EQVisualization.css  EQVisualization.tsx  ExportPanel.css  ExportPanel.tsx  FileUploader.css  FileUploader.tsx  FrequencyAnalyzer.css  FrequencyAnalyzer.tsx
