[package]
name = "eq-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Audio processing
symphonia = { version = "0.5", features = ["all"] }  # MP3, FLAC, WAV desteği
rustfft = "6.1"
realfft = "3.3"
rubato = "0.15"  # Resampling

# DSP
biquad = "0.4"  # High-quality filters
dasp = "0.11"   # Digital audio signal processing

# Math & Analysis
ndarray = "0.15"
num-complex = "0.4"
statrs = "0.16"  # Statistical analysis

# Performance
rayon = "1.8"   # Parallel processing
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
